added the header

--- a/tea.html
+++ b/tea.html
@@ -3,9 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Tea House</title>
 </head>
 <body>
+  <header>
+    <div class="parent_header flex flex-col md:flex-row justify-between items-center mx-w-[1300px] mx-auto">
+      <div class="">
+        <h3 class="text-[80px] font-bold">It's good <br> tea time at The <br> Tea House</h3>
+        <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+        <button class="w-[200px] h-[65px] bg-gradient-to-r from-[#ff8938] to-[#ff0000] text-xl text-white rounded-lg cursor-pointer">Explore More<i class="fa-solid fa-square-arrow-up-right"></i></button>
+
+      </div>
+      <div class="img_text relative">
+       <div class="img_div relative top-[120px]"> <img src="./images/banner.png" alt=""></div>
+        <div class="star_text flex w-[255px] h-[100px] items-center gap-[13px] bg-white absolute left-[100px] rounded-lg shadow-md">
+          <div class="star"><i class="fa-solid fa-star"></i></div>
+          <div class="star_text">
+            <p class="text-[30px] font-extrabold">5.00</p>
+            <p>Trust Pilot Ratings</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
   
 </body>
 </html>
