--- a/tea.html
+++ b/tea.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <div class="parent_header flex flex-col md:flex-row justify-between items-center mx-w-[1300px] mx-auto">
+    <div class="parent_header flex flex-col md:flex-row justify-between items-center mx-w-[1300px] justify-center">
       <div class="">
         <h3 class="text-[80px] font-bold">It's good <br> tea time at The <br> Tea House</h3>
         <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
@@ -30,6 +30,36 @@
 
   </header>
   <main>
+    <section class="products mt-40 md:mt-30 max-w-[1300px] mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="featured min-h-[200px] max-w-[1300px] mx-auto text-center">
+        <h1 class="font-extrabold text-3xl md:text-4xl text-gray-800 mb-4">Our Featured Products</h1>
+        <p class="max-w-[900px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+        <div class="parents_box grid grid-cols-1 md:grid-cols-4 mt-10 gap-5">
+          <div class="box max-h-[391px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] p-4 rounded-lg">
+            <img class="mx-auto block" src="./images/tea-1.png" alt="">
+            <h1 class="text-[25px] font-extrabold">Milk Tea</h1>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="box max-h-[391px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] p-4 rounded-lg">
+            <img class="mx-auto block" src="./images/tea-2.png" alt="">
+            <h1 class="text-[25px] font-extrabold">Black Tea</h1>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="box  max-h-[391px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] p-4 rounded-lg">
+            <img class="mx-auto block" src="./images/tea-3.png" alt="">
+            <h1 class="text-[25px] font-extrabold">Lemon Tea</h1>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="box max-h-[391px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] p-4 rounded-lg">
+            <img class="mx-auto block" src="./images/tea-4.png" alt="">
+            <h1 class="text-[25px] font-extrabold">Green Tea</h1>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
 
   </main>
   <footer>
