added the section two

--- a/tea.html
+++ b/tea.html
@@ -60,6 +60,28 @@
       </div>
 
     </section>
+    <!-- section no:02 -->
+     <section class="great_tea mt-40 md:mt-30 max-w-[1300px] mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="parents_great flex flex-col md:flex-row gap-8 items-center max-w-[1300px] mx-auto items-stretch">
+        <div class="teasty_tea flex-1 grid grid-cols-2 grid-rows-3 gap-4">
+          <div class=" bg-gradient-to-l from-[#ff0000] to-[#ff8938] rounded-lg"></div>
+
+          <div class=" bg-gradient-to-l from-[#ff0000] to-[#ff8938] row-span-2  flex justify-center items-center rounded-lg"><img src="./images/fresh-1.png" alt=""></div>
+
+          <div class=" bg-gradient-to-l from-[#d9d9d9] to-[#ffffff00] row-span-2 flex justify-center items-center rounded-lg"><img src="./images/fresh-2.png" alt=""></div>
+
+          <div class=" bg-gradient-to-l from-[#d9d9d9] to-[#ffffff00] rounded-lg"></div>
+        </div>
+        <div class="teasty_title flex-1">
+          <h1 class="text-[45px] font-extrabold">Great Tea, Freshly <br> Presented</h1>
+          <p class="my-5 ">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h3 class="text-[20px] font-extrabold">Unique Taste</h3>
+          <p class="my-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h3 class="text-[20px] font-extrabold">Premium Quality</h3>
+          <p class="my-5">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+      </div>
+     </section>
 
   </main>
   <footer>
