added the third section

--- a/tea.html
+++ b/tea.html
@@ -82,6 +82,49 @@
         </div>
       </div>
      </section>
+     <!-- section no:03 -->
+      <section class="mt-40 md:mt-30 max-w-[1300px] mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="clients_parents border-2 border-red-500 max-w-[1300px] h-[1000px] md:h-[600px] flex gap-4 p-5 rounded-xl bg-gradient-to-r from-[#ff8938] to-[#ff0000] flex-col md:flex-row">
+
+          <div class="clients_title h-full md:w-1/2  flex justify-center items-center">
+          <div>  <h1 class="text-[45px] font-extrabold text-[#f4f4f4]">Meet Our Super Clients</h1>
+            <p class="mt-8 mb-5 text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="w-[139px] h-[56px] bg-white rounded-[8px] text-[#ff0000] font-bold cursor-pointer">Show All</button></div>
+
+          </div>
+          <div class="clients_img h-full md:w-1/2 relative">
+            <div class="coustomur h-[210px] w-[70%] bg-white rounded-xl p-8 absolute top-[30%] left-[5%] z-10">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h2 class="text-xl font-bold">Ilham Yuda</h2>
+              <h2>Businessman</h2>
+              <div class="absolute -top-[30px] -left-[20px] rounded-full p-1 bg-white">
+                <img src="./images/client.png" alt="">
+              </div>
+              <img src="./images/circles.png" alt="" class="absolute right-4 bottom-4">
+            </div>
+
+            <div class="coustomur h-[210px] w-[70%] bg-white rounded-xl p-8 absolute top-[5%] left-[30%] opacity-20">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h2 class="text-xl font-bold">Ilham Yuda</h2>
+              <h2>Businessman</h2>
+              <div class="absolute -top-[30px] -left-[20px] rounded-full p-1 bg-white">
+                <img src="./images/client.png" alt="">
+              </div>
+            </div>
+
+            <div class="coustomur h-[210px] w-[70%] bg-white rounded-xl p-8 absolute top-[55%] left-[30%] opacity-20">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h2 class="text-xl font-bold">Ilham Yuda</h2>
+              <h2>Businessman</h2>
+              <div class="absolute -top-[30px] -left-[20px] rounded-full p-1 bg-white">
+                <img src="./images/client.png" alt="">
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
 
   </main>
   <footer>
