added the footer

--- a/tea.html
+++ b/tea.html
@@ -127,8 +127,55 @@
       </section>
 
   </main>
-  <footer>
+  <footer class="bg-[#ffe7e6] p-[90px] mt-[100px]">
+    <div class="footer_parent1  mt-40 md:mt-30 max-w-[1300px] mx-auto flex justify-between">
+      <div>
+        <img src="./images/cup.png" alt="">
+      </div>
+      <div class="flex items-center">
+        <p class="mr-8 text-[20px]">Ready to get strated?</p>
+        <button class="w-[164px] h-[56px] bg-gradient-to-r from-[#ff8938] to-[#ff0000] text-xl text-white rounded-lg cursor-pointer">Get Started</button>
+      </div>
+    </div>
+    <div class="footer_parent2  max-w-[1300px] mx-auto px-4 sm:px-6 lg:px-8 flex justify-between mt-20 flex-col md:flex-row text-center md:text-left ">
+      <div>
+        <p class="text-[20] font-semibold">Quick Links</p>
+        <p class="mt-2">Home</p>
+        <p class="mt-2">About Us</p>
+        <p class="mt-2">Insurance</p>
+        <P class="mt-2">Privacy Policy</P>
+        
+      </div>
 
+      <div>
+        <p class="text-[20] font-semibold">Our Service</p>
+        <p class="mt-2">Life insurance</p>
+        <p class="mt-2">Car insurance</p>
+        <p class="mt-2">Health insurance</p>
+        <p class="mt-2">House insurance</p>
+
+      </div>
+
+      <div>
+        <p class="text-[20] font-semibold">Help</p>
+        <p class="mt-2">FAQs</p>
+        <p class="mt-2">Contact Us</p>
+
+      </div>
+
+      <div>
+        <p class="text-[24] font-semibold">Subscribe to our <br> newsletter</p>
+        <input type="email" name="" id="" placeholder="Email address" class="border-b-2 pb-2 mt-5 outline-none">
+        <button class="w-[30px] h-[30px]  rounded-full  bg-gradient-to-r from-[#ff8938] to-[#ff0000]">></button>
+        <div class="mt-5">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+
+      </div>
+    </div>
+    <p class="text-center mt-20">© 2027 UIDesign.to - All rights reserved.</p>
   </footer>
   
 </body>
