added all things

--- a/tea.html
+++ b/tea.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style/style.css">
   <title>Tea House</title>
 </head>
-<body>
+<body class="manrope_font">
   <header>
     <div class="parent_header flex flex-col md:flex-row justify-between items-center mx-w-[1300px] justify-center">
       <div class="">
@@ -86,7 +87,7 @@
       <section class="mt-40 md:mt-30 max-w-[1300px] mx-auto px-4 sm:px-6 lg:px-8">
         <div class="clients_parents border-2 border-red-500 max-w-[1300px] h-[1000px] md:h-[600px] flex gap-4 p-5 rounded-xl bg-gradient-to-r from-[#ff8938] to-[#ff0000] flex-col md:flex-row">
 
-          <div class="clients_title h-full md:w-1/2  flex justify-center items-center">
+          <div class="clients_title h-full md:w-1/2  flex justify-center items-center bg-[url(./images/bg_cup.png)] bg-no-repeat bg-bottom">
           <div>  <h1 class="text-[45px] font-extrabold text-[#f4f4f4]">Meet Our Super Clients</h1>
             <p class="mt-8 mb-5 text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <button class="w-[139px] h-[56px] bg-white rounded-[8px] text-[#ff0000] font-bold cursor-pointer">Show All</button></div>
@@ -166,7 +167,7 @@
       <div>
         <p class="text-[24] font-semibold">Subscribe to our <br> newsletter</p>
         <input type="email" name="" id="" placeholder="Email address" class="border-b-2 pb-2 mt-5 outline-none">
-        <button class="w-[30px] h-[30px]  rounded-full  bg-gradient-to-r from-[#ff8938] to-[#ff0000]">></button>
+        <button class="w-[30px] h-[30px]  rounded-full  bg-gradient-to-r from-[#ff8938] to-[#ff0000]"><i class="fa-solid fa-angle-right"></i></button>
         <div class="mt-5">
           <i class="fa-brands fa-facebook-f"></i>
           <i class="fa-brands fa-twitter"></i>
